changed header size

--- a/nltk.qmd
+++ b/nltk.qmd
@@ -1,16 +1,16 @@
-# Text Analysis with `nltk`
+## Text Analysis with `nltk`
 
-## Introduction
+### Introduction
 
 `nltk`, or Natural Language Toolkit, is a Python package which provides a set of tools for text analysis. `nltk` is used in Natural Language Processing (NLP), a field of computer science which focuses on the interaction between computers and human languages. `nltk` is a very powerful tool for text analysis, and is used by many researchers and data scientists. In this tutorial, we will learn how to use `nltk` to analyze text.
 
-## Getting Started
+### Getting Started
 
 First, we must install `nltk` using `pip`.
 
 `python -m pip install nltk`
 
-## Tokenizing
+### Tokenizing
 
 To analyze text, it needs to be broken down into smaller pieces. This is called tokenization. `nltk` offers two ways to tokenize text: sentence tokenization and word tokenization.
 
@@ -24,7 +24,7 @@ To demonstrate this, we will use the following text, a passage from the 1951 sci
 fd_string = """The sum of human knowing is beyond any one man; any thousand men. With the destruction of our social fabric, science will be broken into a million pieces. Individuals will know much of exceedingly tiny facets of what there is to know. They will be helpless and useless by themselves. The bits of lore, meaningless, will not be passed on. They will be lost through the generations. But, if we now prepare a giant summary of all knowledge, it will never be lost. Coming generations will build on it, and will not have to rediscover it for themselves. One millennium will do the work of thirty thousand."""
 ```
 
-### Sentence Tokenization
+#### Sentence Tokenization
 
 ```{python}
 from nltk import sent_tokenize, word_tokenize
@@ -32,7 +32,7 @@ fd_sent = sent_tokenize(fd_string)
 print(fd_sent)
 ```
 
-### Word Tokenization
+#### Word Tokenization
 
 ```{python}
 fd_word = word_tokenize(fd_string)
@@ -41,7 +41,7 @@ print(fd_word)
 
 Both the sentence tokenization and word tokenization functions return a list of strings. We can use these lists to perform further analysis.
 
-## Removing Stopwords
+### Removing Stopwords
 
 The output of the word tokenization gave us a list of words. However, some of these words are not useful for our analysis. These words are called stopwords. `nltk` provides a list of stopwords for several languages. We can use this list to remove stopwords from our text.
 
@@ -58,7 +58,7 @@ print(fd_filtered)
 
 The resulting list is significantly shorter. There are some words that `nltk` considers stopwords that we may want to keep, depending on the objective of our analysis. Reducing the size of our data can help us to reduce the time it takes to perform our analysis. However, removing too many words can reduce the accuracy, which is especially important when we are trying to perform sentiment analysis.
 
-## Stemming
+### Stemming
 
 Stemming is a method which allows us to reduce the number of variants of a word. For example, the words *connecting*, *connected*, and *connection* are all variants of the same word *connect*. `nltk` includes a few different stemmers based on different algorithms. We will use the Snowball stemmer, an improved version of the 1979 Porter stemmer.
 
@@ -71,7 +71,7 @@ print(fd_stem)
 
 Stemming algorithms are susceptible to errors. Related words that should share a stem may not, which is known as **understemming**, which is a false negative. Unrelated words that should not share a stem may, which is known as **overstemming**, which is a false positive.
 
-## POS Tagging
+### POS Tagging
 
 `nltk` also enables us to label the parts of speech of each word in a text. This is known as part-of-speech (POS) tagging. `nltk` uses the Penn Treebank tagset, which is a set of tags that are used to label words in a text. The tags are as follows:
 
@@ -88,7 +88,7 @@ print(fd_tag)
 
 The tokenized words from the quote should be easy to tag correctly. The function may encounter difficulty with less conventional words (e.g. Old English), but it will attempt to tag based on context.
 
-## Lemmatizing
+### Lemmatizing
 
 Lemmatizing is similar to stemming, but it is more accurate. Lemmatizing is a process which reduces words to their lemma, which is the base form of a word.`nltk` includes a lemmatizer based on the WordNet database. We can demonstrate this using a quote from the 1868 novel *Little Women* by Louisa May Alcott.
 
@@ -101,7 +101,7 @@ quote_lemma = [lemmatizer.lemmatize(w) for w in quote_token]
 print(quote_lemma)
 ```
 
-## Chunking/Chinking
+### Chunking/Chinking
 
 While tokenizing allows us to distinguish individual words and sentences within a larger body of text, **Chunking** allows us to identify phrases based on grammar we specify.
 
@@ -166,7 +166,7 @@ tree.pretty_print(unicodelines=True)
 
 As you can see, the generated tree shows the chunks that were identified by the grammar rules. There also is a `chink` operator, which is the opposite of `chunk`. It allows us to remove a chunk from a larger chunk.
 
-## Named Entity Recognition
+### Named Entity Recognition
 
 Previous methods have been able to identify the parts of speech of each word in a text. However, we may want to identify specific entities within the text. For example, we may want to identify the names of people, places, and organizations. `nltk` includes a named entity recognizer which can identify these entities. We can demonstrate this using a quote from *The Iliad* by Homer.
 
@@ -190,7 +190,7 @@ tree3 = nltk.ne_chunk(homer_tag, binary=True)
 tree3.pretty_print(unicodelines=True)
 ```
 
-## Analyzing Corpora
+### Analyzing Corpora
 
 `nltk` includes a number of corpora, which are large bodies of text. We will try out some methods on the 1851 novel *Moby Dick* by Herman Melville.
 
@@ -198,7 +198,7 @@ tree3.pretty_print(unicodelines=True)
 from nltk.book import *
 ```
 
-### Concordance
+#### Concordance
 
 `concordance` allows us to find all instances of a word in a text. We can use this to find all instances of the word "whale" in *Moby Dick*.
 
@@ -206,7 +206,7 @@ from nltk.book import *
 text1.concordance("whale")
 ```
 
-### Dispersion Plot
+#### Dispersion Plot
 
 `dispersion_plot` allows us to see how a word is used throughout a text. We can use this to see the representation of characters throughout *Moby Dick*.
 
@@ -214,7 +214,7 @@ text1.concordance("whale")
 text1.dispersion_plot(["Ahab", "Ishmael", "Starbuck", "Queequeg"])
 ```
 
-### Frequency Distribution
+#### Frequency Distribution
 
 `FreqDist` allows us to see the frequency of each word in a text. We can use this to see the most common words in *Moby Dick*.
 
@@ -238,7 +238,7 @@ We can visualize the frequency distribution using `plot`.
 fdist2.plot(20, cumulative=True)
 ```
 
-### Collocations
+#### Collocations
 
 `collocations` allows us to find words that commonly appear together. We can use this to find the most common collocations in *Moby Dick*.
 
@@ -246,10 +246,10 @@ fdist2.plot(20, cumulative=True)
 text1.collocations()
 ```
 
-## Conclusion
+### Conclusion
 
 In this tutorial, we have learned how to use `nltk` to perform basic text analysis. There are many methods included in this package that help provide structure to text. These methods can be used in conjunction with other packages to perform more complex analysis. For example, a dataframe of open-ended customer feedback could be processed to identify common themes, as well as the polarity of the feedback.
 
-## Resources
+### Resources
 
 [NLTK Documentation](https://www.nltk.org/) [NLTK Book](https://www.nltk.org/book/)
