--- a/intro.qmd
+++ b/intro.qmd
@@ -188,7 +188,7 @@ random.sample(presenters, len(presenters))
 
 ## Presentation Task Board
 
-Here is a list of tasks:
+Here are some example tasks:
 
 + Import/Export data
 + Descriptive statistics
@@ -199,9 +199,17 @@ Here is a list of tasks:
 + Grammer of graphics for python `plotnine`
 + Handling spatial data with `geopandas`
 + Show your Data in a Google map with `gmplot`
++ Random forest
++ Naive Bayes
++ Bagging vs boosting
 + Calling C/C++ from Python
 + Calling R from Python and vice versa
 + Develop a Python module
++ Neural networks
++ Deep learning
++ TensorFlow
++ Autoencoders
++ Reinforcement learning
 
 
 Please use the following table to sign up.
