--- a/_svm.qmd
+++ b/_svm.qmd
@@ -1,11 +1,11 @@
-# Support Vector Machines
+## Support Vector Machines
 
 
-## Introduction
+### Introduction
 
 Support Vector Machine (SVM) is a type of suppervised learning models that can be used to analyze classification and regression. In this section will develop the intuition behind support vector machines and provide some examples.
 
-## Package that need to install
+### Package that need to install
 
 Before we begin ensure that these this package are installed in your python 
 
@@ -25,7 +25,7 @@ Furthermore, it also provide function that can be used anytime and use it on the
 *   Avalable dataset functions such as Iris dataset `load_iris`
 *   Randomly generated datasets function such as `make_moon` , `make_circle` etc. 
 
-## Support Vector Classifier
+### Support Vector Classifier
 
 Before we get into SVM , let us take a look at this simple classification problem. Consider a distinguishable datasets
 
@@ -221,7 +221,7 @@ for axi, C in zip(ax, [100.0, 0.1]):
     axi.set_title('C = {0:.1f}'.format(C), size=14)
 
 ```
-### Support Vector Machine
+#### Support Vector Machine
 Now we have some basic understanding on classifiying thing, lets take a look at the sample problem below.
 
 ```{python}
@@ -350,7 +350,7 @@ As for summary, **Support Vector Machine** follow these steps:
 2. Use kernel to move the data to a higher dimension.
 3. Find a **Support Vector Classifier** that seperate the data into two groups. 
 
-### Kernel
+#### Kernel
 
 Let talk more about the kernel. There are mutiple type of kernel. We will go through a few of them. Generaly, they call as a kernel trick or kernel method or kernel function. For simple explanation, these kernel can be view as a method on how we transform the data points into. It may need to transform to a higher dimension it may not.
 
@@ -375,7 +375,7 @@ $k(x,x') = \exp\left(-\gamma\left\Vert  x-x' \right\Vert^2\right)$
 
 $\gamma >0$. Sometimes parametrized using $\gamma = \frac{1}{2\sigma^2}$
 
-### Regression Problem
+#### Regression Problem
 
 We will talk a little on Regression Problem and how it works on Support Vector Machine. 
 
@@ -414,14 +414,14 @@ As you can see for regression problem Support Vector Machine for Regression or S
 You can control the model by adjust the `C` value and `epsilon` value. `C` value change the slope of the line, lower the value will reduce the slope of the fit line. `epsilon` change the distance of the decision boundary, lower the `epsilon` reduce the distance of the dicision boundary.
 
 
-### Example: Classification
+#### Example: Classification
 
 Let take a look at our NYC database. We would like to create a machine learning model with SVM.
 
 ```{python}
 import pandas as pd
 
-jan23 = pd.read_csv("-\data\nyc_crashes_202301_cleaned.csv")
+jan23 = pd.read_csv("data/nyc_crashes_202301_cleaned.csv")
 jan23.head()
 ```
 
@@ -510,7 +510,7 @@ accuracy = accuracy_score(y_test, y_pred)
 accuracy
 ```
 
-## Conclusion
+### Conclusion
 
 Support Vector Machines is one of the powerful tool mainly for classifications.
 
@@ -525,7 +525,7 @@ However, SVMs have several disadvantages as well:
 * The results are strongly dependent on a suitable choice for the softening parameter $C$.This must be carefully chosen via cross-validation, which can be expensive as datasets grow in size.
 * The results do not have a direct probabilistic interpretation. This can be estimated via an internal cross-validation (see the probability parameter of SVC), but this extra estimation is costly.
 
-## References
-[In-Depth: Support Vector Machines](https://jakevdp.github.io/PythonDataScienceHandbook/05.07-support-vector-machines.html)
+### References
 
-[Support Vector Machines Video](https://www.youtube.com/watch?v=efR1C6CvhmE)
++ [In-Depth: Support Vector Machines](https://jakevdp.github.io/PythonDataScienceHandbook/05.07-support-vector-machines.html)
++ [Support Vector Machines Video](https://www.youtube.com/watch?v=efR1C6CvhmE)
