--- a/exercises.qmd
+++ b/exercises.qmd
@@ -102,7 +102,7 @@
        precision, recall, F1-score, and AUC.
 
 
-1. (Mid-term team project) The NYC Open Data of 311 Service Requests contains
+1. (Mid-term team project) The [NYC Open Data of 311 Service Requests](https://data.cityofnewyork.us/Social-Services/311-Service-Requests-from-2010-to-Present/erm2-nwe9) contains
    all requests from 2010 to present. We consider a subset of it with request
    time between 00:00:00 01/15/2023 and 24:00:00 01/21/2023. The subset is
    available in CSV format as `data/nyc311_011523-012123_by022023.csv`. Read the
