3 hours not 3 days for NYPD response

--- a/exercises.qmd
+++ b/exercises.qmd
@@ -118,9 +118,9 @@
        weekdays/weekend and by borough, and test whether the distributions
        are the same across weekdays/weekends of their creation
 	   and across boroughs.
-    1. Define a binary variable `over3days` which is 1 if `duration` is greater
-       than 72 hours. Note that it can be obtained even for censored `duration`.
-	   Build a model to predict `over3days`.
+    1. Define a binary variable `over3h` which is 1 if `duration` is greater
+       than 3 hours. Note that it can be obtained even for censored `duration`.
+	   Build a model to predict `over3h`.
 	   If your model has tuning parameters, justify their choices. Apply
        this model to the 311 requests of NYPD in the week of 01/22/2023. Assess
        the performance of your model.
