added Michael Zheng presentation topic

--- a/intro.qmd
+++ b/intro.qmd
@@ -234,7 +234,7 @@ Please use the following table to sign up.
   03/20  | Whitney, William       |
   03/22  | Nguyen, Christine      | Calling R from Python and vice versa
   03/27  | Cummins, Patrick       |
-  03/29  | Zheng, Michael         |
+  03/29  | Zheng, Michael         | Web Scraping with Selenium
   04/03  | Lunetta, Giovanni      | Softmax Regression & Neural Networks with `TensorFlow`
 
 ## Contribute to the Class Notes
