--- a/gmplot.qmd
+++ b/gmplot.qmd
@@ -30,11 +30,8 @@ gmap = gmplot.GoogleMapPlotter(17.438139, 78.39583, 18)
 # Name and location where you want to save your file
 gmap.draw("map1grey.html")
 ```
-```{python}
-# Showing manually created PNG file of the map in this output
-from IPython.display import Image
-Image(filename="map1greyed.png", width=300, height=300)
-```
+![map1greyed.png](images/map1greyed.png)
+
 These Google Map outputs are stored as HTML files that you open and interact with in your browser. However, for the sake of this presentation, I have screenshotted some of these plots and saved them as png files to show some pictures in this notebook.
 
 ### GoogleMapPlotter
@@ -72,11 +69,7 @@ Now that you have created the base map called `gmap`, you need to display it usi
 # Specify what directory and what name you want the HTML file of the map to be stored in/as
 gmap.draw('map2.html')
 ```
-```{python}
-#| echo: false
-# Displaying the image of map2 in this notebook
-Image(filename="map2.png", width=300, height=300)
-```
+![map2.png](images/map2.png)
 After opening the HTML file in your browser, you can zoom, scroll, change the map to satellite, and mark a spot to see the street-view.
 
 ### From_Geocode
@@ -96,11 +89,7 @@ Optional Parameters:
 gmap = gmplot.GoogleMapPlotter.from_geocode('UConn', 16, apikey=apikey)
 gmap.draw('map3.html')
 ```
-```{python}
-#| echo: false
-# Displaying the map3 image example in this notebook
-Image(filename="map3.png", width=300, height=300)
-```
+![map3.png](images/map3.png)
 
 ### Geocode
 
@@ -141,11 +130,7 @@ gmap.text(gentry[0], gentry[1], 'Gentry Building', color='orange')
 
 gmap.draw('map4.html')
 ```
-```{python}
-#| echo: false
-# Displaying the map4 image example in this notebook
-Image(filename="map4.png", width=300, height=300)
-```
+![map4.png](images/map4.png)
 
 ### Directions
 
@@ -172,9 +157,4 @@ gmap.directions((garrigus[0], garrigus[1]),
 
 gmap.draw('map5.html')
 ```
-![map5.png](map5.png)
-```{python}
-#| echo: false
-# Displaying the map5 image example in this notebook
-#Image(filename="map5.png", width=300, height=300)
-```
+![map5.png](images/map5.png)
