--- a/demo/hw.qmd
+++ b/demo/hw.qmd
@@ -5,10 +5,7 @@ date: "January 23, 2023"
 format:
   html:
     code-fold: true
-  pdf: 
-    geometry: 
-      - top=30mm
-      - left=20mm
+    embed-resources: true
 jupyter: python3
 ---
 
