--- a/_pandas1.qmd
+++ b/_pandas1.qmd
@@ -1,10 +1,3 @@
----
-jupyter: python3
----
-
-# Pandas Part 1
-
-# Pandas
 
 > **Pandas** is an open source Python library for data analysis. It gives 
 Python the ability to work with spreadsheet-like data for fast data loading, 
@@ -15,8 +8,6 @@ econometrics term for multidimensional structured datasets.
 import pandas as pd
 import numpy as np
 ```
-
-# Sub Topic 1: Series
 
 Pandas introduces two new data types to Python: **Series** and **DataFrame**
 
@@ -209,7 +200,7 @@ s.index = ['a', 'c', 'd', 'e']
 s + s2
 ```
 
-## Sub Topic 2: DataFrame
+## DataFrame
 
 > A DataFrame represents a rectangular table of data and contains an ordered 
 collection of columns. The DataFrame has both a row and column index.
@@ -273,9 +264,6 @@ d[['state','pop']]
 d2 = pd.DataFrame(np.arange(16).reshape((4, 4)),
                     index=['Ohio', 'Colorado', 'Utah', 'New York'],
                      columns=['one', 'two', 'three', 'four'])
-```
-
-```{python}
 d2
 ```
 
@@ -382,7 +370,7 @@ You can import dataset as well
 
 ```{python}
 import pandas as pd
-crashes = pd.read_csv("Motor_Vehicle_Collisions_-_Crashes.csv")
+crashes = pd.read_csv("data/nyc_crashes_202301.csv")
 ```
 
 ```{python}
@@ -503,7 +491,7 @@ sub_set_1.sort_values(by = 'BOROUGH')
 sub_set_1.sort_values(by = ['CRASH DATE', 'ZIP CODE'], ascending = True)
 ```
 
-## (1) [] method
+### [] method
 
 ```[]``` method can be used to select column(s) by passing column name(s).
 
@@ -515,7 +503,7 @@ sub_set_1['ZIP CODE'].head()
 sub_set_1[['BOROUGH', 'ZIP CODE', 'LOCATION']].head()
 ```
 
-## (2) loc method
+### `loc` method
 
 **loc** can be used to index row(s) and column(s) by providing the row and 
 column labels.
@@ -583,7 +571,7 @@ sub_set_1.loc[(sub_set_1["BOROUGH"] == "MANHATTAN") & (sub_set_1["ZIP CODE"]
 >= 1000)]
 ```
 
-## (3) iloc method
+### `iloc` method
 
 **iloc** can be used to index row(s) and column(s) by providing the row and 
 column integer(s).
@@ -616,7 +604,7 @@ DataFrame by integer positions.
 sub_set_1.iloc[0:5, :6] 
 ```
 
-## ```concat``` method
+### ```concat``` method
 
 ```pd.concat([df1, df2], axis = 0)``` can be used to combine two dataframe 
 either row-wise or column-wise depends on value of **axis**: 
@@ -652,12 +640,11 @@ sub_set_4
 
 use ```.fillna()``` to fill in the missing values
 
-# Conclusion
 
-Pandas is a very useful library that can help work with using large data sets. 
-Some of the basic functions are ```.loc``` and ```iloc```. These are used to 
-select rows and columns in a data set. With those functions, we are able to add 
-more operations to get certain data that we want. In example, we can use ```>``` 
-or ```<``` to get values that are larger or smaller than a selected value. 
-Another function is that We can also compare rows and columns by using  
-```&```, ```|```, and ```~```.
+<!-- Pandas is a very useful library that can help work with using large data sets.  -->
+<!-- Some of the basic functions are ```.loc``` and ```iloc```. These are used to  -->
+<!-- select rows and columns in a data set. With those functions, we are able to add  -->
+<!-- more operations to get certain data that we want. In example, we can use ```>```  -->
+<!-- or ```<``` to get values that are larger or smaller than a selected value.  -->
+<!-- Another function is that We can also compare rows and columns by using   -->
+<!-- ```&```, ```|```, and ```~```. -->
